--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         </div>
         <div id="content">
             <div id="here" class="zone">
-                <div class="place-name">Taipei, Taiwan</div>
+                <div class="place">Taipei, Taiwan</div>
                 <div class="time">13:40</div>
                 <div class="date">7/15</div>
             </div>
             <div id="there" class="zone">
-                <div class="place-name">Quebec, Canada</div>
+                <div class="place">Quebec, Canada</div>
                 <div class="time">4:40</div>
                 <div class="date">7/15</div>
             </div>
@@ -30,5 +30,8 @@
             <div id="love-words-title">Daily Love Words</div>
             <div id="love-words-content">I am leaving, but I will never leave you.</div>
         </div>
+
+        <script src="js/jquery-2.1.1.min.js"></script>
+        <script src="js/index.js"></script>
     </body>
 </html>
