--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <div id="content">
             <div id="here" class="zone">
                 <div class="place">Taipei, Taiwan</div>
-                <div class="time">13:40</div>
-                <div class="date">7/15</div>
+                <div class="time"></div>
+                <div class="date"></div>
             </div>
             <div id="there" class="zone">
                 <div class="place">Quebec, Canada</div>
-                <div class="time">4:40</div>
-                <div class="date">7/15</div>
+                <div class="time"></div>
+                <div class="date"></div>
             </div>
             <svg id="circles" height="500" width="1000">
                 <circle cx="250" cy="250" r="250" fill="MediumPurple" />
@@ -28,7 +28,7 @@
         </div>
         <div id="footer">
             <div id="love-words-title">Daily Love Words</div>
-            <div id="love-words-content">I am leaving, but I will never leave you.</div>
+            <div id="love-words-content"></div>
         </div>
 
         <script src="js/jquery-2.1.1.min.js"></script>
