--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
     <head>
-        <title>Distant Lover Clock</title>
+        <title>Distant Lovers' Clock</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link type="text/css" rel="stylesheet" href="css/index.css">
     </head>
 
     <body>
         <div id="header">
-            <div>Distant Lover Clock</div>
+            <div>Distant Lovers' Clock</div>
         </div>
         <div id="content">
             <div id="here" class="zone">
