--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Distant Lovers' Clock</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link type="text/css" rel="stylesheet" href="css/index.css">
+        <link rel="shortcut icon" href="images/favicon.ico">
     </head>
 
     <body>
