--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="date"></div>
             </div>
             <div id="there" class="zone">
-                <div class="place">Tokyo, Japan</div>
+                <div class="place">Taichung, Taiwan</div>
                 <div class="time"></div>
                 <div class="date"></div>
             </div>
