Write all words in config file

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         </div>
         <div id="content">
             <div id="here" class="zone">
-                <div class="place">Taipei, Taiwan</div>
+                <div class="place"></div>
                 <div class="time"></div>
                 <div class="date"></div>
             </div>
             <div id="there" class="zone">
-                <div class="place">Taichung, Taiwan</div>
+                <div class="place"></div>
                 <div class="time"></div>
                 <div class="date"></div>
             </div>
