--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
             <div>Distant Lovers' Clock</div>
         </div>
         <div id="content">
-            <div id="here" class="zone">
+            <div id="here-text" class="zone">
                 <div class="place"></div>
                 <div class="time"></div>
                 <div class="date"></div>
             </div>
-            <div id="there" class="zone">
+            <div id="there-text" class="zone">
                 <div class="place"></div>
                 <div class="time"></div>
                 <div class="date"></div>
             </div>
             <svg id="circles" height="500" width="1000">
-                <circle cx="250" cy="250" r="250" fill="MediumPurple" />
-                <circle cx="750" cy="250" r="250" fill="Khaki" />
+                <circle id="here-circle" cx="250" cy="250" r="250" fill="Gainsboro" />
+                <circle id="there-circle" cx="750" cy="250" r="250" fill="Gainsboro" />
             </svg>
         </div>
         <div id="footer">
